fixed icon/text overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ body {
 
 .contact-holder {
     padding-bottom: 10px;
+    height: 19px;
 }
 .contact {
     padding-left: 25px;
